@@ -145,7 +145,7 @@ Failed: POSIX code 9: bad escape sequence at offset 4
 Failed: POSIX code 11: unbalanced () at offset 6     
 
 "(?(?C))"
-Failed: POSIX code 3: pattern error at offset 2     
+Failed: POSIX code 3: pattern error at offset 6     
 
 /abcd/substitute_extended
 ** Ignored with POSIX interface: substitute_extended
